--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <main class="container">
     <h1>Feliz Dia das Mulheres 🌸</h1>
     <p>Hoje é um dia especial para celebrar alguém ainda mais especial!</p>
-    <button id="surpriseButton" aria-label="Clique para revelar uma surpresa especial">Clique para uma surpresa!</button>
+    <button id="surpriseButton" aria-label="Clique para revelar uma surpresa especial">Clique Aqui!</button>
     <div class="content-container" id="content">
       <figure class="image-container">
         <img src="IMG-20250221-WA0003.jpg" alt="Foto especial em celebração ao Dia das Mulheres">
